# ml-dev-tooling

./: .pre-commit-config.yaml  README.md  init_env.sh  original_README.md  pyproject.toml
.github/workflow-templates/: ml-dev-tooling-workflow.yml  ml-dev-tooling.properties.json
.github/workflows/: main.yml
docker/: serving.Dockerfile  training.Dockerfile
madewithml/: predict.py  train.py  train.sh
notebooks/: madewithml.ipynb
tests/code/: test_data.py  test_predict.py  test_train.py  test_tune.py  test_utils.py
