[tool.poetry]
name = "ml-dev-tooling"
version = "0.0.1"
authors = [""]
description = "ml-dev example project"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
hyperopt = "0.2.7"
ipywidgets = ">=8"
matplotlib = "3.7.1"
mlflow = "2.3.1"
nltk = "3.8.1"
numpy = "1.24.3"
numpyencoder = "0.3.0"
pandas = "2.0.1"
pretty-errors = "1.2.25"
ray = {version = "2.6.0", extras = ["air"]}
scikit-learn = "1.2.2"
snorkel = "0.9.9"
sqlalchemy = "1.4.48"
torch = "2.0.0"
transformers = "4.28.1"
anyscale = "0.5.131"

[tool.poetry.group.notebooks]
optional = true
[tool.poetry.group.notebooks.dependencies]
cleanlab = "2.3.1"
jupyterlab = "3.6.3"
lime = "0.2.0.1"
seaborn = "0.12.2"
wordcloud = "1.9.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
mkdocstrings = {version = ">=0.18", extras = ["python"]}

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
flake8-pyproject = "1.2.3"
isort = "5.12.0"
pyupgrade = "3.3.2"
fastapi = "0.95.2"
pre-commit = "3.2.2"
typer = "0.9.0"

[tool.poetry.group.test.dependencies]
great-expectations = "0.16.5"
pytest = "7.3.1"
pytest-cov = "4.0.0"

# Black formatting
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.pyupgrade]
py39plus = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Pytest cov
[tool.coverage.run]
omit=["madewithml/evaluate.py", "madewithml/serve.py"]
